kubernetes/apps/bootstrap00/unifi/unifi-network-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-network-application
  namespace: bootstrap
  labels:
    app: unifi-network-application
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi-network-application
  template:
    metadata:
      labels:
        app: unifi-network-application
    spec:
      containers:
        - name: unifi-network-application
          image: lscr.io/linuxserver/unifi-network-application:10.4.57
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10001
              name: discovery
              protocol: UDP
            - containerPort: 3478
              name: stun
              protocol: UDP
            - containerPort: 8080
              name: device-comm
              protocol: TCP
            - containerPort: 8443
              name: admin
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: una-config
